[gd_scene load_steps=4 format=3 uid="uid://bogtpup5w2g4m"]

[ext_resource type="Script" path="res://Scripts/fryArea/fries.gd" id="1_6j7i6"]
[ext_resource type="Texture2D" uid="uid://dhwt836ukndta" path="res://Assets2D/fryAssets/Pipe cleaners.PNG" id="2_0plrf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0kdn7"]
radius = 48.0

[node name="fries" type="Area2D" groups=["fries", "trash"]]
position = Vector2(49, 0)
script = ExtResource("1_6j7i6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0kdn7")

[node name="fry1" type="TextureRect" parent="."]
offset_left = -71.0
offset_top = -60.0
offset_right = 70.0
offset_bottom = 66.0
texture = ExtResource("2_0plrf")
expand_mode = 1
stretch_mode = 5

[node name="fry2" type="TextureRect" parent="."]
visible = false
offset_left = -71.0
offset_top = -60.0
offset_right = 70.0
offset_bottom = 66.0
texture = ExtResource("2_0plrf")
expand_mode = 1
stretch_mode = 5

[node name="fry3" type="TextureRect" parent="."]
visible = false
offset_left = -71.0
offset_top = -60.0
offset_right = 70.0
offset_bottom = 66.0
texture = ExtResource("2_0plrf")
expand_mode = 1
stretch_mode = 5

[node name="fry4" type="TextureRect" parent="."]
visible = false
offset_left = -71.0
offset_top = -60.0
offset_right = 70.0
offset_bottom = 66.0
texture = ExtResource("2_0plrf")
expand_mode = 1
stretch_mode = 5

[node name="fry5" type="TextureRect" parent="."]
visible = false
offset_left = -71.0
offset_top = -60.0
offset_right = 70.0
offset_bottom = 66.0
texture = ExtResource("2_0plrf")
expand_mode = 1
stretch_mode = 5

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
